@@ -17,6 +17,7 @@
 - fixed applying of `controller.status` for `controller.invalid()` method
 - fixed parsing data in the promise in the `TotalAPI()` method
 - fixed error handling in the `QueryBuilder`
+- added `COMPONENTATOR(name, components)` method for downloading of UI components
 
 ========================
 0.0.71
